<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
   <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/transaction_options_instructions" />
    
   <Button
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:text="@string/createnew"
        android:onClick="sendAccountResgistration"/>
       
       
    <Button 
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:text="@string/current_account"
        android:onClick="viewAccounts"/>
    
    <Button 
        android:layout_width="150dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:text="@string/button_make_transaction"
        android:onClick="sendAccounts"/>
       
        
</LinearLayout>