<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    android:orientation="vertical" >

	<EditText
        android:id="@+id/deposit_instructions"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/deposit_instructions" />
	
	<Button 
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/button_submit" 
        android:onClick="sendDeposit"/>
	
	<Button 
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/button_cancel" 
        android:onClick="sendCancel"/>

</LinearLayout>
